# Salamis

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  sourceforge-release.yml
examples/: cluster-1-node.conf  cluster-2-node.conf  cluster-3-node.conf
include/salamis/: SalmisCluster.hpp  SalmisCore.hpp  SalmisManagement.hpp  SalmisRuntime.hpp  SalmisWebConsole.hpp
scripts/: build-linux-packages.sh
src/: SalmisCluster.cpp  SalmisCore.cpp  SalmisManagement.cpp  SalmisRuntime.cpp  SalmisWebConsole.cpp  main.cpp
tests/: salmis_core_tests.cpp
